Add Japanese readme and revise docs.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             ("default" probably means "relevance")
         </div>
         <div>
-            <label for="myCheckbox" >My own posted or voted only:</label>
+            <label for="myCheckbox">My own posted or voted only:</label>
             <input type="checkbox" id="myCheckbox">
         </div>
         <fieldset id="statusSelect">
@@ -96,15 +96,23 @@
     <h3>
         Links
     </h3>
+    Readme:
+    <ul>
+        <li><a href="https://github.com/naqtn/vrchat-feedback-boards-helper/blob/main/README.md"
+                target="github.com/naqtn">
+                Users guide (English version) </a></li>
+        <li><a href="https://github.com/naqtn/vrchat-feedback-boards-helper/blob/main/README-ja.md"
+                target="github.com/naqtn">
+                Japanese version / このツールの説明書（日本語版）</a></li>
+    </ul>
+
     Canny:
     <ul>
         <li><a href="https://help.canny.io/en/articles/4238856-markdown-editing" target="help.canny.io">
                 Markdown for Canny</a> multi-line code notation is very useful</li>
-        <li><a href="https://help.canny.io/en/articles/3827588-board-filters" target="help.canny.io">
-                Board Filters</a> Refer to "Search / Sort" section for sort options meaning</li>
-                <li><a href="https://feedback.canny.io/" target="help.canny.io">
-                    Canny Feedback</a> Canny's Canny</li>
-                    
+        <li><a href="https://feedback.canny.io/" target="help.canny.io">
+                Canny Feedback</a> Canny's Canny</li>
+
     </ul>
     VRChat:
     <ul>
@@ -122,14 +130,13 @@
     </ul>
 
     <div>
-    written by
-    <a href="https://twitter.com/naqtn" target="_blank">naqtn</a>
-    , repo on <a href="https://github.com/naqtn/vrchat-feedback-boards-helper">GitHub</a>
-    , under the MIT License
+        written by
+        <a href="https://twitter.com/naqtn" target="_blank">naqtn</a>
+        , repo on <a href="https://github.com/naqtn/vrchat-feedback-boards-helper">GitHub</a>
+        , under the MIT License
     </div>
 
     <script src="source.js"></script>
 
 </body>
-
 </html>
