clarify  the wording

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <ul>
         <li><a href="https://github.com/naqtn/vrchat-feedback-boards-helper/blob/main/README.md"
                 target="github.com/naqtn">
-                Users guide (English version) </a></li>
+                Users guide of this tool (English version) </a></li>
         <li><a href="https://github.com/naqtn/vrchat-feedback-boards-helper/blob/main/README-ja.md"
                 target="github.com/naqtn">
                 Japanese version / このツールの説明書（日本語版）</a></li>
