move board details from HTML to JS
Move board detail information (URL name, display name) from HTML to JavaScript code.
And add boards of Canny. though it's set as invisible in  committed state)

Add meta charset

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>VRChat feedback boards helper</title>
 </head>
@@ -18,20 +19,7 @@
         </div>
         <div>
             Board:
-            <select id="boardSelect">
-                <option value="feature-requests">Feature Requests</option>
-                <option value="bug-reports">Client Bug Reports</option>
-                <option value="sdk-bug-reports">SDK Bug Reports</option>
-                <option value="website-bug-reports">Website Bug Reports</option>
-                <option value="open-beta">Open Beta</option>
-                <option value="avatar-30">Avatars 3.0</option>
-                <option value="quest-creators">Quest Creators</option>
-                <option value="vrchat-plus-feedback">VRChat Plus Feedback</option>
-                <option value="vrchat-udon-closed-alpha-bugs">Udon Alpha Bugs</option>
-                <option value="vrchat-udon-closed-alpha-feedback">Udon Alpha Feedback</option>
-                <option value="udon-graph-upgrade-closed-testing">Udon Closed Alpha Testing</option>
-                <option value="udon-networking-update">Udon Networking Update</option>
-            </select>
+            <select id="boardSelect"></select>
         </div>
         <div>
             Search text: <input type="search" id="searchText" size="80">
