Implement loading "Recently Opened" item into the form

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
     <div id="experimentalFeaturesDiv" class="hidden">
         <h4>Recently Opened</h4>
-        <div id="recentlyOpenedList" class="tableContainer">
+        <div id="recentlyOpenedContainer" class="tableContainer">
             <table>
                 <thead>
                     <tr>
@@ -116,12 +116,12 @@
                         </th>
                     </tr>
                 </thead>
-                <tbody class="list">
+                <tbody class="recentlyOpenedList">
                     <tr id="recentlyOpenedItemTemplate">
                         <td class="queryString"></td>
                         <!-- <td class="memo"></td> -->
                         <td>
-                            <!-- <input type="button" value="load to the form"> -->
+                            <input type="button" value="load to the form" name="loadToTheForm">
                         </td>
                     </tr>
                 </tbody>
