--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 <thead>
                     <tr>
                         <th>Query</th>
-                        <!-- <th>Memo</th> -->
+                        <th style="width: 40%" title="Click cell to edit note">Note</th>
                         <th>
                             <!--operation buttons-->
                         </th>
@@ -146,7 +146,11 @@
                 <tbody class="list">
                     <tr id="stockedQueryItemTemplate">
                         <td class="queryString"></td>
-                        <!-- <td class="memo"></td> -->
+                        <td style="height:100%"> <!-- to expand div height https://stackoverflow.com/a/7600749 -->
+                            <!-- FIXME height 80% is a makeshift. not accurate -->
+                            <div name="displayLook" class="note cellDisplay" tabindex="0" style="height: 80%;"></div>
+                            <input name="editInput" class="hidden" type="text" style="height: 100%; width: 100%;">
+                        </td>
                         <td>
                             <input type="button" value="Fill the Form" name="loadButton"
                                 title="Fill the form with this entry to search again">
@@ -157,9 +161,11 @@
                 </tbody>
             </table>
         </div>
+        <p>
         <input type="button" id="clearStockedQueryButton" value="Delete all entries">
         <div class="note">
-            Note: This list is automatically stored into local storage of your browser.
+                Note: Stocked list is automatically stored into local storage of your browser.
+                You can reuse it when you visit this tool again.
         </div>
     </div>
     <h3>
@@ -172,7 +178,7 @@
                 Users guide of this tool (English version) </a></li>
         <li><a href="https://github.com/naqtn/vrchat-feedback-boards-helper/blob/main/README-ja.md"
                 target="github.com/naqtn">
-                Japanese version / このツールの説明書（日本語版）</a></li>
+                Users guide (Japanese version) / このツールの説明書（日本語版）</a></li>
     </ul>
 
     Canny:
