Fix list.js not found error

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         , under the MIT License
     </div>
 
-    <script src="libs/list.js-2.3.1/list.js"></script>
+    <script src="libs/list.js-2.3.1/list.min.js"></script>
     <script src="source.js"></script>
 
 </body>
