Add undoing previous delete feature

--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@
         </div>
         <p>
             <input type="button" id="clearStockedQueryButton" value="Delete all entries">
+            <input type="button" id="undoDeleteStockedQueryButton" value="Undo Delete" disabled>
         <div class="note">
             Note: Stocked list is automatically stored into local storage of your browser.
             You can reuse it when you visit this tool again.
