Add a feature showing the author of each post

--- a/browser-extension/popup.html
+++ b/browser-extension/popup.html
@@ -14,7 +14,7 @@
       <h3> Not working on this tab now </h3>
 
       <div style="padding-left: 10px;">
-        The extension works only on
+        This extension works only on
         <ul style="list-style-type: none; padding-inline-start: 10px; margin: 2px;">
           <li>https://feedback.vrchat.com/</li>
           <li>https://*.canny.io/</li>
@@ -35,6 +35,12 @@
           <label>
             <input type="checkbox" name="isHideOthersPosts">
             Hide other people's posts
+          </label>
+        </li>
+        <li>
+          <label>
+            <input type="checkbox" name="isAddAuthorName">
+            Add author name of each post
           </label>
         </li>
     </div>
