Add a feature marking posts by author names

--- a/browser-extension/popup.html
+++ b/browser-extension/popup.html
@@ -49,13 +49,19 @@
             Filter by author names
           </label>
         </li>
+        <li>
+          <label>
+            <input type="checkbox" name="isMarkPostsByAuthorNames">
+            Mark posts by author names
+          </label>
+        </li>
       </ul>
 
       <div>
         <h4 class="thinMargin" style="display:inline-block">Author Names</h4>
         <input id="addNameEntryButton" type="button" value="+" title="add one more author field">
       </div>
-      
+
       <ul id="authorNameList" data-multiple-root="ul" data-multiple-name="authorNames"
         data-multiple-template="authorNamesTemplate" class="simpleList" style="padding-left: 20px;">
       </ul>
