add a feature showing created date of each post

--- a/browser-extension/popup.html
+++ b/browser-extension/popup.html
@@ -39,6 +39,12 @@
         </li>
         <li>
           <label>
+            <input type="checkbox" name="isCreatedDate">
+            Show post created date
+          </label>
+        </li>
+        <li>
+          <label>
             <input type="checkbox" name="isShowAuthorName">
             Show author name of each post
           </label>
