adjust icon and texts

--- a/browser-extension/popup.html
+++ b/browser-extension/popup.html
@@ -8,7 +8,7 @@
 
 <body class="popupBody bodyCommon" style="margin: 10px;">
 
-  <h2 id="pageTitle">Canny extension for End-user</h2>
+  <h2 id="pageTitle">Canny extension for End-users</h2>
 
   <div id="notWorkNowMessage">
     <div>
